@@ -5,6 +5,10 @@ Version 0.12
 ------------
 (codename not selected, release XXX XX, 2008)
 
+- Don't use join(splitlines()) when converting newlines to ``\n``,
+  because that doesn't keep all newlines at the end when the
+  ``stripnl`` lexer option is False.
+
 - Add Tango style, written by Andre Roberge for the Crunchy project.
 
 - Add Python3TracebackLexer and ``python3`` option to 
